[package]
name = "decycle"
version = "0.1.0"
edition = "2021"

[dependencies]
bumpalo = { version = "3.16.0", features = ["allocator-api2"] }
derive-where = "1.2.7"
dunce = "1.0.4"
hashbrown = "0.14.5"
indexmap = "2.2.6"
ouroboros = "0.18.4"
oxc_allocator = "0.14.0"
oxc_ast = "0.14.0"
oxc_diagnostics = "0.14.0"
oxc_parser = "0.14.0"
oxc_resolver = "1.8.1"
oxc_span = "0.14.0"
petgraph = "0.6.5"
rayon = "1.10.0"
rustc-hash = "1.1.0"
smallvec = "1.13.2"
thread_local = "1.1.8"

[dev-dependencies]
rustworkx-core = "0.14.2"
test-case = "3.3.1"
