[package]
name = "decycle"
version = "0.1.0"
edition = "2021"

[dependencies]
bumpalo = { version = "3.16.0", features = ["allocator-api2"] }
camino = { version = "1.1.7", features = ["serde1"] }
clap = { version = "4.5.7", features = ["derive"] }
derive-where = "1.2.7"
dunce = "1.0.4"
hashbrown = "0.14.5"
indexmap = "2.2.6"
ouroboros = "0.18.4"
oxc_allocator = "0.14.0"
oxc_ast = "0.14.0"
oxc_diagnostics = "0.14.0"
oxc_parser = "0.14.0"
oxc_resolver = "1.8.1"
oxc_span = "0.14.0"
pathdiff = "0.2.1"
petgraph = "0.6.5"
rayon = "1.10.0"
rustc-hash = "2.0.0"
serde = "1.0.203"
serde_json = "1.0.117"
smallvec = "1.13.2"
thread_local = "1.1.8"

[dev-dependencies]
rustworkx-core = "0.14.2"
test-case = "3.3.1"
